assets/css/app.css
@import "./phoenix.css";
@import "../node_modules/bootstrap/dist/css/bootstrap.css";
@import "../node_modules/bootstrap/dist/css/_navbar.css";
@import "../node_modules/font-awesome/css/font-awesome.css";

html,
body {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: #1E1E1E;
    color: #ffffff;
    font-size: medium;
    font-family: "CourierPrimeRegular", monospace;
}

#totop {
    display: none;
    position: fixed;
    bottom: 5%;
    right: 10%;
    z-index: 99;
    border-radius: 55%;
    border: 0.5px solid white;
}

.container {
    width: 90%;
}

.jumbotron {
    background-color: #1E1E1E;
    padding-left: 20%;
    padding-right: 20%;
}

.section-title {
    text-align: center;
}

.delimiter {
    width: 60%;
    margin: auto;
    padding-bottom: 30px;
    border-top: 1px solid #fff;
    border-top: 1px solid rgba(255, 255, 255, 0.6);
}

.description {
    text-align: justify;
}

.link {
    color: #ffffff;
}

a:hover {
    color: gray;
    text-decoration: none;
}

.active {
    font-weight: bold;
}

.avatar {
    vertical-align: middle;
    width: 15%;
    height: 12%;
}

.flex-row {
    justify-content: center;
}

.grow:hover {
    -webkit-transform: scale(1.3);
    -ms-transform: scale(1.3);
    transform: scale(1.3);
}

.active-content,
.secondary-content {
    display: none;
}

@media (max-width: 768px) {
    .container {
        width: 100%;
    }

    .active-content {
        margin-top: 15%;
    }

    .navbar-collapse {
        position: absolute;
        background-color: #141414;
        top: 75px;
        left: 0;
        padding-left: 30px;
        padding-right: 30px;
        padding-bottom: 30px;
        width: 100%;
        text-align: center;
        font-size: x-large;
    }

    .navbar-collapse.collapsing {
        height: auto;
        -webkit-transition: left 0.3s ease;
        -o-transition: left 0.3s ease;
        -moz-transition: left 0.3s ease;
        transition: left 0.3s ease;
        left: -100%;
    }

    .navbar-collapse.show {
        left: 0;
        -webkit-transition: left 0.3s ease-in;
        -o-transition: left 0.3s ease-in;
        -moz-transition: left 0.3s ease-in;
        transition: left 0.3s ease-in;
    }
}

